# cpp-designing4performance

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run
intro/: CMakeLists.txt  json.cpp  json.hpp  memory.cpp  select.buffer.cpp  select.cpp  select.to_chars.cpp  select.unbuffered.cpp  writes.cpp
libs/: CMakeLists.txt
movies/: makedata.py
real/: CMakeLists.txt  fast.cpp  json.cpp  json.hpp  memory.cpp  select.endl.cpp  select.simple.cpp  writes.cpp
slides/: CMakeLists.txt  Designing APIs For Performance.odp  barrier.cpp  json.hpp  memory.cpp  row.cpp  select.buffer.cpp  select.endl.cpp  stringify.cpp  writes.cpp
